# discord-bot

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  enhancement.yaml
docs/wasm/: .$WASM plugin architecture.drawio.bkp  WASM plugin architecture.drawio
src/: client.rs  main.rs  plugins.rs  utils.rs
src/client/: base.rs  commands.rs  data.rs
src/plugins/: manager.rs  plugin.rs
src/utils/: env.rs  logger.rs
